--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,10 @@
-hi it me. paisley. sad emo teen just trying to be seen. 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>PUERI NON STERCORE</title>
+  </head>
+  <body>
+  <h1>GWC 2017: my first heading</h1>
+  <p>remember, pueri non stercore</p>
+  </body>
+</html>
