--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,8 @@
   </head>
   <body>
   <h1>GWC 2017: my first heading</h1>
-  <p>remember, pueri non stercore</p>
+  <p title= "it means boys aint nothing">remember, pueri non stercore</p>
+    <p>here's a link to my favorite youtuber, KickThePj. He makes mystical videos.<a>https://www.youtube.com/user/KickThePj</a>
+      and here's a picture of a cat head <img>
   </body>
 </html>
