--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
   <body>
   <h1>GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
-    <p>here's a link to my favorite youtuber, KickThePj. He makes mystical videos.<a>https://www.youtube.com/user/KickThePj</a>
-      and here's a picture of a cat head <img>
+    <p><a href=https://www.youtube.com/user/KickThePj>here's a link to my favorite youtuber, KickThePj. He makes mystical videos.</a>
+      and here's a picture of a cat head <img></p> 
   </body>
 </html>
