--- a/aboutme.html
+++ b/aboutme.html
@@ -3,10 +3,13 @@
   <head>
     <title>PUERI NON STERCORE</title>
   </head>
-  <body>
+  <body style="background color: periwinkle;" >
   <h1>GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
     <p><a href=https://www.youtube.com/user/KickThePj>here's a link to my favorite youtuber, KickThePj. He makes mystical videos.</a>
-      and here's a picture of a cat head <img></p> 
+    </p> 
+    <hr> <h2> html is fun and interesting i'm having fun. it's nice knowing what I copy from tumblr.</h2>
+    <p>this is a line <br> break </p>
+    
   </body>
 </html>
