--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
     <title>PUERI NON STERCORE</title>
   </head>
-  <body style="background color: periwinkle;" >
+  <body style="background color: 	#00FFFF;" >
   <h1>GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
     <p><a href=https://www.youtube.com/user/KickThePj>here's a link to my favorite youtuber, KickThePj. He makes mystical videos.</a>
