--- a/aboutme.html
+++ b/aboutme.html
@@ -6,10 +6,11 @@
   <body style="background color: 	#00FFFF;" >
   <h1>GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
-    <p><a href=https://www.youtube.com/user/KickThePj>here's a link to my favorite youtuber, KickThePj. He makes mystical videos.</a>
+    <p><a href=https://www.youtube.com/user/KickThePj>here's</a> a link to my favorite youtuber, KickThePj. He makes mystical videos.
     </p> 
     <hr> <h2> html is fun and interesting i'm having fun. it's nice knowing what I copy from tumblr.</h2>
     <p>this is a line <br> break </p>
+    <p style="text-allign:center;font-family:verdana;color:blue"> this is a test of allignment, font and color.</p>
     
   </body>
 </html>
