--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     </p> 
     <hr> <h2> html is fun and interesting i'm having fun. it's nice knowing what I copy from tumblr.</h2>
     <p>this is a line <br> break </p>
-    <p style="text-allign:center;font-family:verdana;color:blue"> this is a test of allignment, font and color.</p>
+    <p style="text-align:right;font-family:verdana;color:purple"> this is a test of allignment, font and color.</p>
     
   </body>
 </html>
