--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <title>PUERI NON STERCORE</title>
+    <style>
+    body {background-color: #fff17b}
+      h1 {color: black} 
+  
+      
   </head>
-  <body style="background color: 	#00FFFF;" >
+
   <h1>GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
     <p><a href=https://www.youtube.com/user/KickThePj>here's</a> a link to my favorite youtuber, KickThePj. He makes mystical videos.
