--- a/aboutme.html
+++ b/aboutme.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <title>PUERI NON STERCORE</title>
+  </head>
+    <body> 
     <style>
     body {background-color: #fff17b}
       h1 {color: black} 
-  
-      
-  </head>
-
+    </style>   
   <h1>GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
     <p><a href=https://www.youtube.com/user/KickThePj>here's</a> a link to my favorite youtuber, KickThePj. He makes mystical videos.
@@ -16,6 +15,6 @@
     <hr> <h2> html is fun and interesting i'm having fun. it's nice knowing what I copy from tumblr.</h2>
     <p>this is a line <br> break </p>
     <p style="text-align:right;font-family:verdana;color:purple"> this is a test of allignment, font and color.</p>
-    
+ 
   </body>
 </html>
