--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     body {background-color: #fff17b}
       h1 {color: black} 
     </style>   
-  <h1>GWC 2017: my first heading</h1>
+  <h1 style="color: #979690;">GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
     <p><a href=https://www.youtube.com/user/KickThePj>here's</a> a link to my favorite youtuber, KickThePj. He makes mystical videos.
     </p> 
