--- a/paisleytest.html
+++ b/paisleytest.html
@@ -6,15 +6,17 @@
     <body> 
     <style>
     body {background-color: #fff17b}
-      h1 {color: black} 
+      h2 {color: black} 
     </style>   
-  <h1 style="color: #979690;">GWC 2017: my first heading</h1>
+  <h1 style="color: #979690; text-align:center; font-style:175%;">GWC 2017: my first heading</h1>
   <p title= "it means boys aint nothing">remember, pueri non stercore</p>
     <p><a href=https://www.youtube.com/user/KickThePj>here's</a> a link to my favorite youtuber, KickThePj. He makes mystical videos.
     </p> 
     <hr> <h2> html is fun and interesting i'm having fun. it's nice knowing what I copy from tumblr.</h2>
-    <p>this is a line <br> break </p>
+    <p>this is a line <br style="color:black;"> break </p>
     <p style="text-align:right;font-family:verdana;color:purple"> this is a test of allignment, font and color.</p>
+      <br><p>this is a test of text styles.<sub>this is a subscript. always see this style on tumblr & reddit.</sub><sup>it's opposite is a
+      superscript</sup><del>i beleive this is a strikethrough text</del><mark>which varies from marked text</mark>
  
   </body>
 </html>
