--- a/aboutme.html
+++ b/aboutme.html
@@ -9,3 +9,8 @@
   h1 {color: #43433B}
 </style>
   <h1 style="text-align:center">ABOUT ME</h1>
+  <p>here's what I have to put on this page as a GWC requirement.</p>
+  <li>variables: contains information that can change easily.</li>
+  <li>loops:a sequence of instruction that is continually repeated</li>
+  <li>functions: a type of procedure or routine</li>
+  <li>conditions: how we tell the program to make choices</li>
