--- a/aboutme.html
+++ b/aboutme.html
@@ -14,3 +14,5 @@
   <li>loops:a sequence of instruction that is continually repeated</li>
   <li>functions: a type of procedure or routine</li>
   <li>conditions: how we tell the program to make choices</li>
+<style>
+  h2 {color: #43433B, font: verdana}
