--- a/aboutme.html
+++ b/aboutme.html
@@ -16,3 +16,5 @@
   <li>conditions: how we tell the program to make choices</li>
 <style>
   h2 {color: #43433B, font: verdana}
+  <h2>June 19<sup>th</sup><h2>
+  <p>TODAY WE MADE ROBOT CIRCUITS. And that's it.</p> 
