--- a/paisleytest.html
+++ b/paisleytest.html
@@ -17,6 +17,15 @@
     <p style="text-align:right;font-family:verdana;color:purple"> this is a test of allignment, font and color.</p>
       <br><p>this is a test of text styles.<sub>this is a subscript. always see this style on tumblr & reddit.</sub><sup>it's opposite is a
       superscript</sup><del>i beleive this is a strikethrough text</del><mark>which varies from marked text</mark>
- 
+ <ul>
+   <li>
+   <button onclick="jsRad()">Click for Rad Message</button>
+   </li>
+ </ul>
+ <script>
+ function jsRad() {
+ 	alert("You're rad.");
+    }
+    </script>
   </body>
 </html>
